--- a/customerresearcher/pyproject.toml
+++ b/customerresearcher/pyproject.toml
@@ -2,7 +2,7 @@
 name = "customerresearcher"
 version = "0.1.0"
 description = "CustomerResearcher using crewAI"
-authors = ["Your Name <you@example.com>"]
+authors = ["Abhinav Palash"]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<=3.13"
